2003-03-21  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/CalendarDisplayOptions.xml:
	* en/Gtk/AnchorType.xml: Simple docs for these enums.

2003-03-16  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/MenuShell.xml
	* en/Gtk/MenuDirectionType.xml: Documented.

2003-03-15  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/Bin.xml:
	* en/Gtk/Alignment.xml: First drafts.

2003-03-12  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/PositionType.xml:
	* en/Gtk/HandleBox.xml: First draft docs.

2003-03-11  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/Range.xml: First draft.
	
2003-03-09  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/Widget.xml:First draft: all methods documented.
	* en/Gtk/WidgetFlags.xml:Documented.

2003-03-09  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/Scale.xml:
	* en/Gtk/[VH]Scale.xml: Simple documentation for Scale widgets.

2003-03-08  Miguel de Icaza  <miguel@ximian.com>

	* en/GLib/IdleHandler.xml: Documented.

	* en/GLib/List.xml: Documented. 

	* en/GLib/Idle.xml: Documented.
	

2003-03-08  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/Table.xml: First draft of table docs. Have left spacing
	  properties as todo items until I sort the API - it's a bit of a mess.
	
2003-03-08  Duncan Mak  <duncan@ximian.com>

	* en/*/*.xml: Removed all the Deprecated nodes now.

2003-03-06  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/AccelFlags.xml
	* en/Gtk/ScrollType.xml: Update and first draft.

2003-03-06  Duncan Mak  <duncan@ximian.com>

	* en/*/*.xml: Updated all the docs to match the new API. All the nodes
	that no longer have a corresponding member in the type are now
	marked as deprecated. We'll have to wait for Miguel to implement
	this in the browser to stop displaying them.

	All gtype constructors have been regenerated, because of the
	'uint' to 'GLib.Type' change. However, this patch will preserve
	(well, it was regenerated) the customized text for those GType