@@ -1,5 +1,7 @@
 2003-03-21  Lee Mallabone <mono-docs@fonicmonkey.net>
 
+	* en/Gtk/Adjustment.xml: First draft; good docs for ClampPage missing.
+
 	* en/Gtk/CalendarDisplayOptions.xml:
 	* en/Gtk/AnchorType.xml: Simple docs for these enums.
 
